--- a/_posts/2017-12-21-Wu-Li-Hao.md
+++ b/_posts/2017-12-21-Wu-Li-Hao.md
@@ -2,7 +2,7 @@
 layout: post
 type: "project"
 title:  "Wu Li Hao"
-link: "http://localhost:4000/blog/pushing-to-app-store/"
+link: /blog/pushing-to-app-store/"
 date:   2017-12-21
 excerpt: "Order and delivery tracking apps to streamline the business flow of a local noodle manufacturer."
 image: "/assets/images/wulihao.png"
